<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <GridLayout
        android:id="@+id/checkBoxesLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:columnCount="3"
        android:rowCount="2"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp">
        <CheckBox
            android:id="@+id/lowerCaseCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lower_case_checkbox_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_columnWeight="1" />
        <CheckBox
            android:id="@+id/upperCaseCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/lowerCaseCB"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_columnWeight="1"
            android:text="@string/upper_case_checkbox_text"/>
        <CheckBox
            android:id="@+id/numbersCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/lowerCaseCB"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_columnWeight="1"
            android:text="@string/numbers_checkbox_text"/>
    </GridLayout>

    <LinearLayout
        android:id="@+id/specialCharactersLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkBoxesLayout"
        android:layout_gravity="center_horizontal">

        <CheckBox
            android:id="@+id/specialCharactersCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/special_characters_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/specialCharactersLayout"
        android:orientation="vertical"
        android:layout_marginHorizontal="16dp">

    <EditText
        android:id="@+id/passwordLengthET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_length_edittext_text"
        android:padding="16dp"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:inputType="number"
        android:background="@drawable/rounded_corners"
        />

        <Button
            android:id="@+id/generatePassBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generate_button_text"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/generate_pass_icon" />

        <EditText
            android:id="@+id/generatedPassET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:focusable="false"
            android:hint="@string/generated_password_text"
            android:padding="16dp"
            android:textSize="16sp" />

    </LinearLayout>










</androidx.constraintlayout.widget.ConstraintLayout>